# polysync-transcoder

./: .gitattributes  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  conanfile.py
binding/: CMakeLists.txt  python.cpp
cmdline/: CMakeLists.txt  encode.cpp  filter.cpp  plugin.cpp  toml.cpp  transcode.cpp
features/: CMakeLists.txt  bad-inputs.feature  encode.plog.feature  filter.slice.feature  filter.typefilter.feature  plog_decode.feature  transcode.feature  trash.plog
features/artifacts/: ibeo.1.plog  ibeo.25.plog
features/step_definitions/: CMakeLists.txt  cucumber-cpp.wire  plog.cpp
features/steps/: transcode.py
lib/: CMakeLists.txt  decoder.cpp  description.cpp  descriptor.cpp  detector.cpp  encoder.cpp  exception.cpp  logging.cpp
lib/descriptor/: catalog.cpp  formatter.cpp  lex.cpp  print.cpp  toml.cpp
lib/detector/: catalog.cpp  search.cpp
lib/plog/: core.cpp  decoder.cpp  encoder.cpp  iterator.cpp  magic.cpp
plugin/: CMakeLists.txt  csv.cpp  datamodel.cpp  dump.cpp  hdf5.cpp  list.cpp  matlab.cpp  model.cpp  plog.cpp  plog_encode.cpp  scidb.cpp
plugin/encode/: CMakeLists.txt  dump.cpp  list.cpp  plog.cpp
plugin/filter/: slice.cpp  typefilter.cpp
polysync/: byteswap.hpp  compound_types.hpp  console.hpp  description.hpp  descriptor.hpp  detector.hpp  encoder.hpp  exception.hpp  hana.hpp  hana_descriptor.hpp  io.hpp  logging.hpp  plugin.hpp  print.hpp  print_descriptor.hpp  print_hana.hpp  print_tree.hpp  print_vector.hpp  size.hpp  toml.hpp  tree.hpp
polysync/decoder/: decoder.hpp  iterator.hpp  types.hpp
polysync/descriptor/: catalog.hpp  formatter.hpp  lex.hpp  print.hpp  toml.hpp  type.hpp
polysync/plog/: core.hpp  decoder.hpp  description.hpp  detector.hpp  encoder.hpp  io.hpp  iterator.hpp  magic.hpp  tree.hpp
polysync/transcode/: console.hpp  core.hpp  decoder.hpp  description.hpp  dynamic.hpp  dynamic_reader.hpp  io.hpp  logging.hpp  plugin.hpp  reader.hpp  size.hpp  tree.hpp  variant.hpp  writer.hpp
share/: core.toml  ibeo.toml  mobileye.toml  sensor.toml  velodyne.toml
test/: CMakeLists.txt  decode.cpp  decode_description.cpp  decode_hana.cpp  description.cpp  descriptor.cpp  detector.cpp  encode.cpp  print.cpp  size.cpp  tree.cpp  types.hpp  variant.cpp  xunit.py
test/transcode/: ibeo.toml  transcode  transcode.feature
test/transcode/steps/: transcode.py
transcode/: CMakeLists.txt  README.md  core.cpp  csv.cpp  datamodel.cpp  decoder.cpp  description.cpp  detector.cpp  dump.cpp  dynamic_reader.cpp  encoder.cpp  exception.cpp  hdf5.cpp  io.cpp  legacy.cpp  logging.cpp  matlab.cpp  plog.cpp  python.cpp  query.cpp  scidb.cpp  transcode.cpp
